Bug 802321 - Don't compare geometry objects for inactive layers. r=roc